@@ -43,7 +43,8 @@ all_by_module = {
     'werkzeug.exceptions':  ['abort', 'Aborter'],
     'werkzeug.urls':        ['url_decode', 'url_encode', 'url_quote',
                              'url_quote_plus', 'url_unquote',
-                             'url_unquote_plus', 'url_fix', 'Href'],
+                             'url_unquote_plus', 'url_fix', 'Href',
+                             'iri_to_uri', 'uri_to_iri'],
     'werkzeug.formparser':  ['parse_form_data'],
     'werkzeug.utils':       ['escape', 'environ_property', 'cookie_date',
                              'http_date', 'append_slash_redirect', 'redirect',
